--- a/HideableUIView/Base.lproj/Main.storyboard
+++ b/HideableUIView/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +12,79 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HideableUIView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ahr-oE-kyq">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jec-gT-PWh">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am centered in info view" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Up-DS-hiC">
+                                                <rect key="frame" x="0.0" y="15.5" width="375" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.25354617680000002" blue="0.1845382817" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="3jL-aN-37k"/>
+                                            <constraint firstItem="7Up-DS-hiC" firstAttribute="leading" secondItem="Jec-gT-PWh" secondAttribute="leading" id="4cj-ah-TOw"/>
+                                            <constraint firstAttribute="trailing" secondItem="7Up-DS-hiC" secondAttribute="trailing" id="DRn-8J-5As"/>
+                                            <constraint firstItem="7Up-DS-hiC" firstAttribute="centerY" secondItem="Jec-gT-PWh" secondAttribute="centerY" id="aEK-aF-o4s"/>
+                                            <constraint firstItem="7Up-DS-hiC" firstAttribute="centerX" secondItem="Jec-gT-PWh" secondAttribute="centerX" id="zig-TP-GyJ"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jh3-Hh-0dd">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="597"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am centered in view" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UTp-aU-Si3">
+                                                <rect key="frame" x="0.0" y="288.5" width="375" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEV-4A-nhe">
+                                                <rect key="frame" x="117.5" y="547" width="140" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="140" id="3Rl-8B-4d3"/>
+                                                    <constraint firstAttribute="height" constant="40" id="4Rr-Ma-WyF"/>
+                                                </constraints>
+                                                <state key="normal" title="Toggle info view"/>
+                                                <connections>
+                                                    <action selector="toggleInfoView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="808-Oz-83j"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.21069611260000001" green="0.94317444959999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="MEV-4A-nhe" firstAttribute="centerX" secondItem="jh3-Hh-0dd" secondAttribute="centerX" id="APl-vS-7kI"/>
+                                            <constraint firstAttribute="bottom" secondItem="MEV-4A-nhe" secondAttribute="bottom" constant="10" id="Bh5-I3-UkW"/>
+                                            <constraint firstItem="UTp-aU-Si3" firstAttribute="centerY" secondItem="jh3-Hh-0dd" secondAttribute="centerY" id="MxC-rO-zDb"/>
+                                            <constraint firstItem="UTp-aU-Si3" firstAttribute="centerX" secondItem="jh3-Hh-0dd" secondAttribute="centerX" id="Xsu-2i-ZsN"/>
+                                            <constraint firstAttribute="trailing" secondItem="UTp-aU-Si3" secondAttribute="trailing" id="jPT-qL-dVY"/>
+                                            <constraint firstItem="UTp-aU-Si3" firstAttribute="leading" secondItem="jh3-Hh-0dd" secondAttribute="leading" id="zTQ-hr-Ukb"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ahr-oE-kyq" secondAttribute="bottom" id="U6h-H2-Tps"/>
+                            <constraint firstItem="ahr-oE-kyq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="YcV-39-Dcw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ahr-oE-kyq" secondAttribute="trailing" id="ZgU-M9-b1k"/>
+                            <constraint firstItem="ahr-oE-kyq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="my0-a6-gY9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="infoView" destination="Jec-gT-PWh" id="8Pu-mp-NgD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
